--- a/Lingual/Lingual.Tests/Locale/en.json
+++ b/Lingual/Lingual.Tests/Locale/en.json
@@ -1,21 +1,16 @@
 ﻿{
-    "en": [
-        {
-
-            "account.invalid.message": "The user name or password provided is incorrect.",
-            "account.invalid.newpassword": "'New Password' and 'Confirm New Password' do not match.",
-            "account.invalid.privileges": "Sorry, you do not have sufficient privileges to access that resource.",
-            "account.invalid.username": "The username provided is incorrect.",
-            "account.signon.invalid.message": "The Single Sign On request was not formatted correctly.",
-            "login.hello": "Hello!",
-            "loggedin.user.day": "Hello {0}! Today is {1}",
-            "loggedin.user.inbox": [
-                {
-                    "1": "1 new message",
-                    "2": "2 new messages",
-                    "other":  "{0} new messagisms"
-                }
-            ]
+    "en": {
+        "account.invalid.message": "The user name or password provided is incorrect.",
+        "account.invalid.newpassword": "'New Password' and 'Confirm New Password' do not match.",
+        "account.invalid.privileges": "Sorry, you do not have sufficient privileges to access that resource.",
+        "account.invalid.username": "The username provided is incorrect.",
+        "account.signon.invalid.message": "The Single Sign On request was not formatted correctly.",
+        "login.hello": "Hello!",
+        "loggedin.user.day": "Hello {0}! Today is {1}",
+        "loggedin.user.inbox": {
+            "1": "1 new message",
+            "2": "2 new messages",
+            "other":  "{0} new messagisms"
         }
-    ]
+    }
 }
