--- a/Lingual/Lingual/locale/de.json
+++ b/Lingual/Lingual/locale/de.json
@@ -1,4 +1,5 @@
-﻿{
+﻿// FIXME DELETE
+{
     "de": [
         {
             "account.invalid.message": "The user name or password provided is incorrect.",
