--- a/Lingual/Lingual.Test/Locale/de-de.json
+++ b/Lingual/Lingual.Test/Locale/de-de.json
@@ -5,11 +5,11 @@
     "account.invalid.username": "Die zur Verfügung gestellten Benutzernamen ist falsch.",
     "account.signon.invalid.message": "Der Benutzername oder das Passwort ist nicht korrekt .",
     "login.hello": "Hallo!",
-    "loggedin.user.day": "Hallo, {0}. Heute ist {1}",
+    "loggedin.user.day": "Hallo, __NAME__. Heute ist __DAY__",
     "loggedin.user.inbox": 
         {
             "ONE": "1 neue Nachricht",
             "TWO": "2 neue Nachrichten",
-            "OTHER":  "{0} neue Nachrichtenismo"
+            "OTHER":  "__AMOUNT__ neue Nachrichtenismo"
         }
 }
