--- a/Lingual/Lingual.Test/Locale/es-mx.json
+++ b/Lingual/Lingual.Test/Locale/es-mx.json
@@ -5,12 +5,10 @@
     "account.invalid.username": "El nombre de usuario proporcionado es incorrecta.",
     "account.signon.invalid.message": "El Single Sign On solicitud no se ha formateado correctamente.",
     "login.hello": "¡Hola!",
-    "loggedin.user.day": "¡Hola {0}! Hoy es {1}",
+    "loggedin.user.day": "¡Hola __NAME__! Hoy es __DAY__",
     "loggedin.user.inbox": { 
         "ONE": "1 nuevo mensaje",
         "TWO": "2 nuevo mensajes",
-        "OTHER":  "{0} nuevo mensajismos"
-    }
-                    
-            
+        "OTHER":  "__AMOUNT__ nuevo mensajismos"
+    } 
 }
