fix typo in en.us and fix the typo in the test suite

--- a/Lingual/Lingual.Test/Locale/en-us.json
+++ b/Lingual/Lingual.Test/Locale/en-us.json
@@ -9,6 +9,6 @@
     "loggedin.user.inbox": {
         "ONE": "1 new message",
         "TWO": "2 new messages",
-        "OTHER":  "__AMOUNT__ new messagisms"
+        "OTHER":  "__AMOUNT__ new messages"
     }
 }
