--- a/Lingual.Tests/locale/en.json
+++ b/Lingual.Tests/locale/en.json
@@ -5,11 +5,11 @@
     "account.invalid.username": "The username provided is incorrect.",
     "account.signon.invalid.message": "The Single Sign On request was not formatted correctly.",
     "login.hello": "Hello!",
-    "loggedin.user.day": "Hello {0}! Today is {1}",
+    "loggedin.user.day": "Hello __name__! Today is __day__",
     "loggedin.user.inbox": {
         "ONE": "1 new message",
         "TWO": "2 new messages",
-        "OTHER": "{0} new messages"
+        "OTHER": "__amount__ new messages"
     },
     "hello.test.message":  "This is a testie test",
     "nested":{
